<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bglogin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.phuchai.myrestaurant.MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/lg"
        android:textColor="#1FFF00"
        android:textSize="60sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_weight="2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="26dp">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:text="@string/tk"
                android:textColor="#F1CB5F"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/editID"
                android:layout_width="90sp"
                android:layout_height="32sp"
                android:layout_marginLeft="10dp"
                android:layout_weight="4"
                android:background="@drawable/dinhdang_edittext"
                android:inputType="number"
                android:textColor="#866122"
                android:textSize="26sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:weightSum="10">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:text="@string/mk"
                android:textColor="#F1CB5F"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="90sp"
                android:layout_height="32sp"
                android:layout_marginLeft="10dp"
                android:layout_weight="4"
                android:background="@drawable/dinhdang_edittext"
                android:inputType="numberPassword"
                android:textColor="#866122"
                android:textSize="26sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/hover_button"
            android:text="@string/lg"
            android:textSize="28sp" />

        <Button
            android:id="@+id/buttonQuit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/hover_button"
            android:text="@string/quit"
            android:textSize="28sp" />
    </LinearLayout>

</LinearLayout>